fix: update CORS origin patterns and support VITE_API_BASE_URL